Fix image stretching on about and center align h1

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,9 +28,8 @@ body {
 }
 
 h1, h2 {
-	text-align: center;
 	margin: 20px 0;
-	width: 100%;
+	text-align: center;
 }
 
 h3 {
@@ -372,6 +371,10 @@ h3 {
 	        justify-content: space-between;
 }
 
+.main > div:first-child {
+	width: 100%;
+}
+
 @media screen and (max-width: 720px) {
 	.main {
 		padding: 5px;
@@ -626,6 +629,8 @@ h3 {
 	        justify-content: center;
 }
 
+.members > h2 {width: 100%;}
+
 .members div {
 	width: 45%;
 	height: auto;
@@ -642,13 +647,12 @@ h3 {
 	        justify-content: center;
 }
 
-.members div > * {
-	
-}
 
 .members img {
-	width: 45%;
-	height: 45%;
+	width: 45vw;
+	height: 45vw;
+	max-width: 320px;
+	max-height: 320px;
 	margin: 20px 5px 20px 5px;
 }
 
@@ -656,20 +660,22 @@ h3 {
 
 .rightalignchildren > * {
 	text-align: right;
-	width: 80%;
-	margin-left: 20%;
+	width: 90%;
+	margin-left: 10%;
 }
 
 .leftalignchildren > * {
 	text-align: left;
-	width: 80%;
-	margin-right: 20%;
+	width: 90%;
+	margin-right: 10%;
 }
 
 @media screen and (max-width: 768px) {
 	.members img {
-		width: 100%;
-		height: 100%;
+		width: 75vw;
+		height: 75vw;
+		max-width: initial;
+		max-height: initial;
 		margin-bottom: 5px;
 	}
 	
